php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #69174 leaks when unused inner class use traits precedence
Submitted: 2015-03-03 18:05 UTC Modified: 2015-03-04 03:31 UTC
From: reeze@php.net Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: 5.5.22 OS: Any
Private report: No CVE-ID: None
 [2015-03-03 18:05 UTC] reeze@php.net
Description:
------------
This leaks, and it was uncovered by master's AST dumper test: Zend/tests/assert/expect_015.php 


Test script:
---------------
function test() {
  class B {
    use T1, T2 {
        T1::foo insteadof T2;
    }
  }
}

echo "DONE\n";

Expected result:
----------------
No leak

Actual result:
--------------
[Wed Mar  4 02:05:32 2015]  Script:  '/Users/reeze/015.php'
Zend/zend_language_scanner.l(1913) :  Freeing 0x10672F010 (3 bytes), script=/Users/reeze/015.php
=== Total 1 memory leaks detected ===

Patches

Pull Requests

Pull requests:

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-03-04 03:31 UTC] laruence@php.net
I can reproduce this without opcache.

will have a look
 [2015-03-04 03:42 UTC] reeze@php.net
Thanks. I add a PR for this as well.
 [2015-03-05 10:45 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f039225597b51f2ee02a050391d497ae68d63b39
Log: Fixed bug #69174 (leaks when unused inner class use traits precedence)
 [2015-03-05 10:45 UTC] laruence@php.net
-Status: Open +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 11:00:01 2026 UTC