Fixed bug #69174 (leaks when unused inner class use traits precedence)

This was uncovered by master's new tests: Zend/tests/assert/expect_015.php