Zend/zend_compile.h
@@ -213,6 +213,9 @@ typedef struct _zend_try_catch_element {
 #define ZEND_ACC_RETURN_REFERENCE		0x4000000
 #define ZEND_ACC_DONE_PASS_TWO			0x8000000
 
+/* class traits binded */
+#define ZEND_ACC_TRAITS_BINDED		    0x10000000
+
 char *zend_visibility_string(zend_uint fn_flags);
 
 
